--- a/public/Register/index.html
+++ b/public/Register/index.html
@@ -43,9 +43,30 @@
                 <div class=smallspacer></div>
                 <h3>PLANS</h3>
                 <div class=smallspacer></div>
-                <p>£8.00 Entitles you to be a Lockdown Learning Tutor for <span class="bold">a month</span></p>
-                <p>£40.00 Entitles you to be a Lockdown Learning Tutor for <span class="bold">6 months</span></p>
-                <p>£60.00 Entitles you to be a Lockdown Learning Tutor for <span class="bold">a year</span></p>
+            </div>
+            <div class="table">
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Price Per Month</td>
+                            <td>Contract Length</td>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>£8.00</td>
+                        <td>1 Month</td>
+                    </tr>
+                    <tr>
+                        <td>£6.50</td>
+                        <td>6 Months</td>
+                    </tr>
+                    <tr>
+                        <td>£5.00</td>
+                        <td>1 Year</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="constrict">
                 <div class=smallspacer></div>
                 <h3>REGISTERING</h3>
                 <div class=smallspacer></div>
