--- a/public/Tutors/index.html
+++ b/public/Tutors/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div id="menu" class="menu" hidden>
-                    <button>MENU</button>
+                    <button onclick="focus()">MENU</button>
                     <ul>
                         <li onclick="window.location.href='../'">Home</li>
                         <li onclick="window.location.href='../About/'">About</li>
