--- a/public/Register/index.html
+++ b/public/Register/index.html
@@ -15,7 +15,7 @@
         <div class="banner">
             <div class="dropdown">
                 <div class="menu">
-                    <button>MENU</button>
+                    <button onclick="focus()">MENU</button>
                     <ul>
                         <li onclick="window.location.href='../'">Home</li>
                         <li onclick="window.location.href='../About/'">About</li>
