--- a/public/Tutors/index.html
+++ b/public/Tutors/index.html
@@ -42,7 +42,7 @@
         <div class=medspacer></div>
 
         <div class=content id=content>
-            <h1 id=title hidden>Our Tutors</h1>
+            <h1 id=title hidden>OUR TUTORS</h1>
             <div class="grid" id="tutors"></div>
         </div>
 
